--- a/params.yaml
+++ b/params.yaml
@@ -4,5 +4,8 @@ data_dir:
   metrics: artifacts/metrics.csv
 model_names:
   llama2: llama2
-metrics:
-  llama2: artifacts/llama2_metrics.json
+data_path:
+  llama2_base: artifacts/llama2_base_metrics.json
+  llama2_base_prompts: artifacts/llama2_base_prompts.json
+test_size:
+  test_size: 100
